--- a/Trabajadores/css/style.css
+++ b/Trabajadores/css/style.css
@@ -208,10 +208,11 @@ body {
 .info-box {
     margin-top: 25px;
     padding: 15px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.8);
     border-radius: 8px;
-    border-left: 4px solid #ff6b9d;
+    border: 4px solid #5fc7ea;
     text-align: left;
+    font-weight: bold;
 }
 
 .info-box p {
@@ -219,9 +220,9 @@ body {
     margin: 5px 0;
 }
 
-.info-box p:first-child {
-    font-weight: bold;
-    font-size: 1rem;
+.informazioa {
+    color: red;
+    text-align: center;
 }
 
 /* Footer */
