--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,18 @@ body {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+/* digi */
+#header .foto-digi {
+    width: 50px;
+    height: auto;
+    position: absolute;
+    left: 40px;
+    /* esto con el top que no se poque ostias no se centra */
+    top: 4vh; 
+}
+
 /* Logo del header */
-#header img {
+#header .logo {
     width: 50px;
     height: auto;
     filter: brightness(0) invert(1);
