--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ td {
     border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-/* Iframe para el video que no va y el mapa */
+/* Iframe para el mapa */
 #servicios img, #contacto iframe {
     margin: 20px auto;
     border-radius: 10px;
